--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
     <head>
         <title>СервисДом73 - сервис оказания бытовых услуг</title>
 
-        <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-        <link rel="manifest" href="/site.webmanifest">
-        <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5da578">
+        <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+        <link rel="manifest" href="site.webmanifest">
+        <link rel="mask-icon" href="safari-pinned-tab.svg" color="#5da578">
 
-        <link rel="stylesheet" href="/style.css">
+        <link rel="stylesheet" href="style.css">
 
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -18,7 +18,7 @@
     </head>
     <body>
         <nav>
-            <img src="/android-chrome-192x192.png" class="navicon">
+            <img src="android-chrome-192x192.png" class="navicon">
             <p class="navtitle">
                 СервисДом73<br>
                 <navdesc>Сервис оказания бытовых услуг</navdesc>
@@ -55,7 +55,7 @@
             <div class="pubdiv2">
                 <div class="firstblock">
                     <p>О НАС</p>
-                    <img src="/android-chrome-192x192.png">
+                    <img src="android-chrome-192x192.png">
                     <h1 class="comptitle">СервисДом73</h1>
                     <mhr></mhr>
                     <p class="compinfo">
@@ -71,7 +71,7 @@
                 </div>
                 <div class="qfirstblock">
                     <p>О НАС</p>
-                    <img src="/android-chrome-192x192.png">
+                    <img src="android-chrome-192x192.png">
                     <h1 class="comptitle">СервисДом73</h1>
                     <mhr></mhr>
                     <p class="query">1. Кто мы?</p>
@@ -83,21 +83,21 @@
         </div>
         <div class="articles">
             <div class="pubdiv4">
-                <div class="article-div" style="background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(&quot;/img/mebel.jpg&quot;);" b1>
+                <div class="article-div" style="background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(&quot;img/mebel.jpg&quot;);" b1>
                     <div p20>
                         <p class="article-name">Сборка мебели</p>
                         <mhr></mhr>
                         <p class="article-desc">Мы также предоставляем услуги по сборке мебельной продукции</p>
                     </div>
                 </div>
-                <div class="article-div" style="background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(&quot;/img/cleaning.jpg&quot;);" b2>
+                <div class="article-div" style="background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(&quot;img/cleaning.jpg&quot;);" b2>
                     <div p20>
                         <p class="article-name">Клининг</p>
                         <mhr></mhr>
                         <p class="article-desc">Только у нас вы сможете заказать клининг высшего качества</p>
                     </div>
                 </div>
-                <div class="article-div" style="background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(&quot;/img/santech.jpg&quot;);" b3>
+                <div class="article-div" style="background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(&quot;img/santech.jpg&quot;);" b3>
                     <div p20>
                         <p class="article-name">Сантехник</p>
                         <mhr></mhr>
@@ -113,46 +113,46 @@
         </div>
         <div class="pubdiv5">
             <div class="image-grid">
-                <img src="/img/photo1.jpg">
+                <img src="img/photo1.jpg">
             </div>
             <div class="image-grid">
-                <img src="/img/photo6.jpg">
+                <img src="img/photo6.jpg">
             </div>
             <div class="image-grid">
-                <img src="/img/photo3.jpg">
+                <img src="img/photo3.jpg">
             </div>
             <div class="image-grid">
-                <img src="/img/photo8.jpg">
+                <img src="img/photo8.jpg">
             </div>
         </div>
         <div class="pubdiv5">
             <div class="image-grid">
-                <img src="/img/photo4.jpg">
+                <img src="img/photo4.jpg">
             </div>
             <div class="image-grid">
-                <img src="/img/photo7.jpg">
+                <img src="img/photo7.jpg">
             </div>
             <div class="image-grid">
-                <img src="/img/photo2.jpg">
+                <img src="img/photo2.jpg">
             </div>
             <div class="image-grid">
-                <img src="/img/photo5.jpg">
-            </div>
-        </div>
-        <div class="qpubdiv5">
-            <div class="image-grid">
-                <img src="/img/photo1.jpg">
-            </div>
-            <div class="image-grid">
-                <img src="/img/photo6.jpg">
+                <img src="img/photo5.jpg">
             </div>
         </div>
         <div class="qpubdiv5">
             <div class="image-grid">
-                <img src="/img/photo4.jpg">
+                <img src="img/photo1.jpg">
             </div>
             <div class="image-grid">
-                <img src="/img/photo2.jpg">
+                <img src="img/photo6.jpg">
+            </div>
+        </div>
+        <div class="qpubdiv5">
+            <div class="image-grid">
+                <img src="img/photo4.jpg">
+            </div>
+            <div class="image-grid">
+                <img src="img/photo2.jpg">
             </div>
         </div>
     </body>
