--- a/index.html
+++ b/index.html
@@ -83,6 +83,20 @@
         </div>
         <div class="articles">
             <div class="pubdiv4">
+                <div class="article-div" style="background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(&quot;img/santech.jpg&quot;);" b3>
+                    <div p20>
+                        <p class="article-name">Сантехник</p>
+                        <mhr></mhr>
+                        <p class="article-desc">Капает кран? Прорвало трубу? Не беда, мы и с этим справимся!</p>
+                    </div>
+                </div>
+                <div class="article-div" style="background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(&quot;img/santech.jpg&quot;);" b3>
+                    <div p20>
+                        <p class="article-name">Электрик</p>
+                        <mhr></mhr>
+                        <p class="article-desc">Если случились проблемы с проводкой, тогда к нам</p>
+                    </div>
+                </div>
                 <div class="article-div" style="background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(&quot;img/mebel.jpg&quot;);" b1>
                     <div p20>
                         <p class="article-name">Сборка мебели</p>
@@ -95,13 +109,6 @@
                         <p class="article-name">Клининг</p>
                         <mhr></mhr>
                         <p class="article-desc">Только у нас вы сможете заказать клининг высшего качества</p>
-                    </div>
-                </div>
-                <div class="article-div" style="background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(&quot;img/santech.jpg&quot;);" b3>
-                    <div p20>
-                        <p class="article-name">Сантехник</p>
-                        <mhr></mhr>
-                        <p class="article-desc">Капает кран? Прорвало трубу? Не беда, мы и с этим справимся!</p>
                     </div>
                 </div>
             </div>
