--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                         <p class="article-desc">Капает кран? Прорвало трубу? Не беда, мы и с этим справимся!</p>
                     </div>
                 </div>
-                <div class="article-div" style="background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(&quot;img/santech.jpg&quot;);" b3>
+                <div class="article-div" style="background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(&quot;img/electr.jpg&quot;);" b3>
                     <div p20>
                         <p class="article-name">Электрик</p>
                         <mhr></mhr>
